# actix-template

./: .env.example  Cargo.toml  LICENSE  README.md
src/: config.rs  db.rs  main.rs  misc.rs  response.rs
src/tests/: database.rs  mod.rs  response.rs
